--- a/index.html
+++ b/index.html
@@ -1,51 +1,46 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Flash card</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Flash card</title>
+    <link rel="stylesheet" href="style.css" href="assets/style.css"
+    > 
 </head>
-
 <body>
-<main>
+    <main>
 <section id="container">
-
-
-<article class="cartao">
-
-<div class="cartao__conteudo">
-
+ <article class="cartao">
+<div class="cartao__conteudo"</div>
 <h3>Programação</h3>
 <div class="cartao__conteudo__pergunta">
-O que é JavaScript?
+   <p> O que é JavaScript? </p> 
 </div>
 <div class="cartao__conteudo__resposta">
-O JavaScript é uma linguagem de programação
+   <p>O JavaScript é uma linguagem de programação </p> 
 </div>
 </div>
 
-</article>
-<article class="cartao">
-<div class="cartao__conteudo">
-<h3>Programação</h3>
-<div class="cartao__conteudo__pergunta">
-O que é CSS?
-</div>
-<div class="cartao__conteudo__resposta">
-O CSS é uma linguagem de estilização
-</div>
-</div>
+    </article>
+
+    <article class="cartao">
+        <div class="cartao__conteudo">
+                <h3>Programação</h3>
+                <div class="cartao__conteudo__pergunta">
+                       <p> O que é CSS?</p> 
+                </div>
+                <div class="cartao__conteudo__resposta">
+                        <p> O CSS é uma linguagem de estilização</p>
+                </div>
+        </div>
 </article>
 
 </section>
-</main>
+    </main>
 
-<footer>
-<p>Projeto desenvolvido por...</p>
-</footer>
+    <footer>
+<p>Projeto desenvolvodo por Larissa Alba</p>
+    </footer>
 
 </body>
-
 </html>
